overflow fix

--- a/public/css/avatar_form.css
+++ b/public/css/avatar_form.css
@@ -3,7 +3,8 @@ html,
 .frame {
     width: 100%;
     min-height: 100vh;
-    overflow-y: hidden;
+    /* overflow-y: hidden; */
+    overflow-x: hidden;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
           Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
